--- a/main.html
+++ b/main.html
@@ -4,7 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A.Y CARS</title>
+    <link rel="stylesheet" href="CSS/main.css">
+        <!-- Font Awesome -->
+        <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      />
+      <!-- Google Fonts Open Sans -->
+      <link rel="preconnect" href="https://fonts.googleapis.com" />
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+      <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&family=Open+Sans:wght@400;600;700;800&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Work+Sans:ital,wght@0,200;0,400;0,500;0,600;0,700;1,200;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet"
+      />
+      <!-- playfair display font -->
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+  </head>
 </head>
 <body>
+    <header>
+        <div class="container">
+            <div class="main-content">
+                <div class="logo-header">
+                    <div class="logo">
+                        <img src="media/photos/logo/without backgroun.png" alt="">
+                    </div>
+                </div>
+                <a href="#">
+                    <h2>A.Y</h2>
+                    <p>Car<span>s</span></p>
+                </a>
+                <nav>
+                    <div class="links">
+                        <ul>
+                            <li><a href="#">home</a></li>
+                            <li><a href="#">models</a></li>
+                            <li><a href="#">contact</a></li>
+                        </ul>
+                        <div class="search"><i class="fa-solid fa-magnifying-glass"></i></div>
+                    </div>
+                </nav>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
