added brands header

--- a/main.html
+++ b/main.html
@@ -32,22 +32,56 @@
                         <img src="media/photos/logo/without backgroun.png" alt="">
                     </div>
                 </div>
-                <a href="#">
+                <a class="title" href="#">
                     <h2>A.Y</h2>
                     <p>Car<span>s</span></p>
                 </a>
                 <nav>
-                    <div class="links">
                         <ul>
-                            <li><a href="#">home</a></li>
-                            <li><a href="#">models</a></li>
-                            <li><a href="#">contact</a></li>
+                            <li>
+                                <a href="#">Home</a>
+                            </li>
+                            <li>
+                                <a href="#">Brand</a>
+                            </li>
+                            <li>
+                                <a href="#">Contact</a>
+                            </li>
                         </ul>
-                        <div class="search"><i class="fa-solid fa-magnifying-glass"></i></div>
-                    </div>
                 </nav>
             </div>
         </div>
     </header>
+    <section class="main-section">
+        <div class="container">
+            <div class="main-content">
+                <div class="our-brands">
+                    <h1>Our Brands</h1>
+                </div>
+                <ul class="brand-header">
+                    <li>
+                        <div class="brand-title">
+                            <i class="fa-solid fa-car"></i>
+                            <p>Car Brand</p>
+                            <i class="fa-solid fa-caret-down"></i>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="brand-title">
+                            <i class="fa-solid fa-car-side"></i>
+                            <p>Body Type</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="brand-title">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                            <p>Search Car</p>
+                        </div>
+                    </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
