--- a/main.html
+++ b/main.html
@@ -42,7 +42,7 @@
                                 <a href="#">Home</a>
                             </li>
                             <li>
-                                <a href="#">Brand</a>
+                                <a href="#brands">Brands</a>
                             </li>
                             <li>
                                 <a href="#">Contact</a>
@@ -52,12 +52,10 @@
             </div>
         </div>
     </header>
+    <h1 class="our-brands">Our Brands</h1>
     <section class="main-section">
         <div class="container">
             <div class="main-content">
-                <div class="our-brands">
-                    <h1>Our Brands</h1>
-                </div>
                 <ul class="brand-header">
                     <li>
                         <div class="brand-title">
@@ -79,9 +77,114 @@
                         </div>
                     </li>
                     </ul>
+                    <div class="brands" id="barands">
+                        <div class="card">
+                                <img src="media/photos/mercedes.jpg" alt="photo">
+                                <div class="info">
+                                    <h3><a href="">Mercedes-Benz <i class="fa-solid fa-arrow-up-right-from-square"></i></a></h3>
+                                    <p>Mercedes-Benz: A legacy of luxury,
+                                        driving the future with a heritage of innovation.
+                                    </p>
+                                </div>
+                                <div class="social">
+                                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                                    <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                                </div>
+                        </div>
+                        <div class="card">
+                                <img src="media/photos/bugatti.jpg" alt="photo">
+                                <div class="info">
+                                    <h3><a href="#">bugatti <i class="fa-solid fa-arrow-up-right-from-square"></i></a></h3>
+                                    <p>Bugatti: A century-old legacy of speed and elegance, where art meets automotive mastery.</p>
+                                </div>
+                                <div class="social">
+                                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                                    <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                                </div>
+                        </div>
+                        <div class="card">
+                                <img src="media/photos/bmw.jpg" alt="photo">
+                                <div class="info">
+                                    <h3><a href="#">BMW <i class="fa-solid fa-arrow-up-right-from-square"></i></a></h3>
+                                    <p>BMW: A fusion of tradition and innovation, driving the spirit of progress with dynamic performance.</p>
+                                </div>
+                                <div class="social">
+                                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                                    <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                                </div>
+                        </div>
+                        <div class="card">
+                                <img src="media/photos/ferrari.jpg" alt="photo">
+                                <div class="info">
+                                    <h3><a href="#">ferrari <i class="fa-solid fa-arrow-up-right-from-square"></i></a></h3>
+                                    <p>Ferrari: Synonymous with racing excellence and Italian luxury, a marque that turns dreams into reality.</p>
+                                </div>
+                                <div class="social">
+                                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                                    <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                                </div>
+                        </div>
+                        <div class="card">
+                                <img src="media/photos/audi.jpg" alt="photo">
+                                <div class="info">
+                                    <h3><a href="#">audi <i class="fa-solid fa-arrow-up-right-from-square"></i></a></h3>
+                                    <p>Audi: A legacy of luxury, driving the future with a heritage of innovation.</p>
+                                </div>
+                                <div class="social">
+                                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                                    <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                                </div>
+                        </div>
+                        <div class="card">
+                                <img src="media/photos/lambo.jpg" alt="photo">
+                                <div class="info">
+                                    <h3><a href="#">Lamborghini <i class="fa-solid fa-arrow-up-right-from-square"></i></a></h3>
+                                    <p>Lamborghini: Unleashing the thrill of innovation and the power of Italian craftsmanship in every drive.</p>
+                                </div>
+                                <div class="social">
+                                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                                    <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                                </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-logo">
+                    <img src="media/photos/logo/without backgroun.png" alt="">
+                    <h2>Ahmed Youssef</h2>
+                    <div class="footer-social">
+                        <a href="https://github.com/Ahmed-Youssef45"><i class="fab fa-github"></i></a>
+                        <a href="www.linkedin.com/in/ahmed-youssef-54063a286"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="ahmedyoussef1035@gmail.com"><i class="fa-regular fa-envelope"></i></a>
+                    </div>
+                </div>
+                <div class="footer-info">
+                    <div class="footer-info-content">
+                        <i class="fa-solid fa-location-dot"></i>
+                        <p>Alexandria, Egypt</p>
+                    </div>
+                    <div class="footer-info-content">
+                        <i class="fa-regular fa-clock"></i>
+                        <p>08:00 AM - 04:00 PM</p>
+                    </div>
+                    <div class="footer-info-content">
+                        <i class="fa-solid fa-phone"></i>
+                        <p>+201066208298</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
