transfer to arabic

--- a/main.html
+++ b/main.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A.Y CARS</title>
+    <title>سيارات</title>
+    <link rel="icon" type="icon" href="media/photos/logo/favicon.ico">
+    
     <link rel="stylesheet" href="CSS/main.css">
         <!-- Font Awesome -->
         <link
@@ -21,7 +23,11 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
-  </head>
+  <!-- Cairo font -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&display=swap" rel="stylesheet">
+</head>
 </head>
 <body>
     <header>
@@ -33,26 +39,25 @@
                     </div>
                 </div>
                 <a class="title" href="#">
-                    <h2>A.Y</h2>
-                    <p>Car<span>s</span></p>
+                    <p>سيارات</p>
                 </a>
                 <nav>
                         <ul>
                             <li>
-                                <a href="#">Home</a>
+                                <a href="#">الرئيسية</a>
                             </li>
                             <li>
-                                <a href="#brands">Brands</a>
+                                <a href="#brands">الماركة</a>
                             </li>
                             <li>
-                                <a href="#">Contact</a>
+                                <a href="#">اتصل بنا</a>
                             </li>
                         </ul>
                 </nav>
             </div>
         </div>
     </header>
-    <h1 class="our-brands">Our Brands</h1>
+    <h1 class="our-brands">الماركات المتاحة</h1>
     <section class="main-section">
         <div class="container">
             <div class="main-content">
@@ -60,20 +65,20 @@
                     <li>
                         <div class="brand-title">
                             <i class="fa-solid fa-car"></i>
-                            <p>Car Brand</p>
+                            <p>نوع السيارة</p>
                             <i class="fa-solid fa-caret-down"></i>
                         </div>
                     </li>
                     <li>
                         <div class="brand-title">
                             <i class="fa-solid fa-car-side"></i>
-                            <p>Body Type</p>
+                            <p>نوع الجسم</p>
                         </div>
                     </li>
                     <li>
                         <div class="brand-title">
                             <i class="fa-solid fa-magnifying-glass"></i>
-                            <p>Search Car</p>
+                            <p>بحث عن سيارة</p>
                         </div>
                     </li>
                     </ul>
@@ -81,9 +86,8 @@
                         <div class="card">
                                 <img src="media/photos/mercedes.jpg" alt="photo">
                                 <div class="info">
-                                    <h3><a href="">Mercedes-Benz <i class="fa-solid fa-arrow-up-right-from-square"></i></a></h3>
-                                    <p>Mercedes-Benz: A legacy of luxury,
-                                        driving the future with a heritage of innovation.
+                                    <h3 dir="rtl"><a href="">مرسيدس بنز <i class="fa-solid fa-arrow-up-right-from-square"></i></a></h3>
+                                    <p dir="rtl">مرسيدس بنز: تراث من الفخامة، قيادة المستقبل بتراث من الابتكار.
                                     </p>
                                 </div>
                                 <div class="social">
@@ -95,8 +99,8 @@
                         <div class="card">
                                 <img src="media/photos/bugatti.jpg" alt="photo">
                                 <div class="info">
-                                    <h3><a href="#">bugatti <i class="fa-solid fa-arrow-up-right-from-square"></i></a></h3>
-                                    <p>Bugatti: A century-old legacy of speed and elegance, where art meets automotive mastery.</p>
+                                    <h3 dir="rtl"><a href="#">بوجاتي<i class="fa-solid fa-arrow-up-right-from-square"></i></a></h3>
+                                    <p dir="rtl">بوجاتي: تراث عمره قرن من السرعة والأناقة، حيث يلتقي الفن بإتقان السيارات.</p>
                                 </div>
                                 <div class="social">
                                     <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
@@ -107,8 +111,8 @@
                         <div class="card">
                                 <img src="media/photos/bmw.jpg" alt="photo">
                                 <div class="info">
-                                    <h3><a href="#">BMW <i class="fa-solid fa-arrow-up-right-from-square"></i></a></h3>
-                                    <p>BMW: A fusion of tradition and innovation, driving the spirit of progress with dynamic performance.</p>
+                                    <h3 dir="rtl"><a href="#">بي إم دبليو<i class="fa-solid fa-arrow-up-right-from-square"></i></a></h3>
+                                    <p dir="rtl">بي إم دبليو: مزيج من التقاليد والابتكار، يقود روح التقدم مع الأداء الديناميكي.</p>
                                 </div>
                                 <div class="social">
                                     <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
@@ -119,8 +123,8 @@
                         <div class="card">
                                 <img src="media/photos/ferrari.jpg" alt="photo">
                                 <div class="info">
-                                    <h3><a href="#">ferrari <i class="fa-solid fa-arrow-up-right-from-square"></i></a></h3>
-                                    <p>Ferrari: Synonymous with racing excellence and Italian luxury, a marque that turns dreams into reality.</p>
+                                    <h3 dir="rtl"><a href="#">فيراري<i class="fa-solid fa-arrow-up-right-from-square"></i></a></h3>
+                                    <p dir="rtl">فيراري: مرادف للتميز في عالم السباقات والفخامة الإيطالية، العلامة التجارية التي تحول الأحلام إلى حقيقة.</p>
                                 </div>
                                 <div class="social">
                                     <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
@@ -131,8 +135,8 @@
                         <div class="card">
                                 <img src="media/photos/audi.jpg" alt="photo">
                                 <div class="info">
-                                    <h3><a href="#">audi <i class="fa-solid fa-arrow-up-right-from-square"></i></a></h3>
-                                    <p>Audi: A legacy of luxury, driving the future with a heritage of innovation.</p>
+                                    <h3 dir="rtl"><a href="#">أودي<i class="fa-solid fa-arrow-up-right-from-square"></i></a></h3>
+                                    <p dir="rtl">أودي: تراث من الفخامة، قيادة المستقبل بتراث من الابتكار.</p>
                                 </div>
                                 <div class="social">
                                     <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
@@ -143,8 +147,8 @@
                         <div class="card">
                                 <img src="media/photos/lambo.jpg" alt="photo">
                                 <div class="info">
-                                    <h3><a href="#">Lamborghini <i class="fa-solid fa-arrow-up-right-from-square"></i></a></h3>
-                                    <p>Lamborghini: Unleashing the thrill of innovation and the power of Italian craftsmanship in every drive.</p>
+                                    <h3 dir="rtl"><a href="#">لامبورغيني<i class="fa-solid fa-arrow-up-right-from-square"></i></a></h3>
+                                    <p dir="rtl">لامبورغيني: إطلاق العنان لإثارة الابتكار وقوة الصنعة الإيطالية في كل رحلة.</p>
                                 </div>
                                 <div class="social">
                                     <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
@@ -162,7 +166,7 @@
             <div class="footer-content">
                 <div class="footer-logo">
                     <img src="media/photos/logo/without backgroun.png" alt="">
-                    <h2>Ahmed Youssef</h2>
+                    <h2>أحمد يوسف</h2>
                     <div class="footer-social">
                         <a href="https://github.com/Ahmed-Youssef45"><i class="fab fa-github"></i></a>
                         <a href="www.linkedin.com/in/ahmed-youssef-54063a286"><i class="fab fa-linkedin-in"></i></a>
