--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A.Y CARS Login</title>
+    <title>سيارات</title>
+    <link rel="icon" type="icon" href="media/photos/logo/favicon.ico">
+    <meta dir="rtl">
     <!-- CSS -->
     <link rel="stylesheet" href="CSS/style.css">
     <!-- Main.HTML -->
@@ -24,6 +26,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+<!-- Cairo font -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Start Login -->
@@ -34,28 +40,28 @@
             </div>      
                 <fieldset>
                     <legend>
-                        <p>CAR<span>S</span></p>
+                        <p>سيارات</p>
                     </legend>
                         <div class="login">
-                            <h1>Log in</h1>
+                            <h1>تسجيل الدخول</h1>
                             <form action="">
                                 <div class="login-email">
-                                    <input type="email" title="email" placeholder="Email" required='required'>
+                                    <input type="email" title="email" placeholder="الحساب" required='required'>
                                 </div>
                                 <div class="login-pass">
-                                    <input type="password" title="password" placeholder="Password" required>
+                                    <input type="password" title="password" placeholder="كلمة المرور" required>
                                 </div>
                                 <div class="remember-forget">
                                     <div class="remember-me">
                                         <input type="checkbox" title="remeber">
-                                        <p>remeber me</p>
+                                        <p>تذكرني</p>
                                     </div>
-                                    <a href="#">forget password?</a>
+                                    <a href="#">نسيت كلمة المرور؟</a>
                                 </div>
-                                <button type="submit" onclick="location.href='main.html'">Login</button>
+                                <button type="submit" onclick="location.href='main.html'">تسجيل الدخول</button>
                                 <div class="signup">
-                                    <p>Don't have account?</p>
-                                    <a href="#">Signup</a>
+                                    <p>ليس لديك حساب؟</p>
+                                    <a href="#">إنشاء حساب</a>
                                 </div>
                             </form>
                         </div>
