--- a/main.html
+++ b/main.html
@@ -50,7 +50,7 @@
                                 <a href="#brands">الماركة</a>
                             </li>
                             <li>
-                                <a href="#">اتصل بنا</a>
+                                <a href="#footer">اتصل بنا</a>
                             </li>
                         </ul>
                 </nav>
@@ -161,7 +161,7 @@
             </div>
         </div>
     </section>
-    <footer>
+    <footer id="footer">
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
